Add Golang setting to vimrc

--- a/tmux.conf
+++ b/tmux.conf
@@ -41,7 +41,7 @@ set-option -g status-left '#H:[#P]'
 set-option -g status-right '#(tmux-mem-cpu-load) | #(get_ssid) #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
 
 # Correspond to utf8 on status-bar
-set-option -g status-utf8 on
+#set-option -g status-utf8 on
 
 # Set interval for re-drawing
 set-option -g status-interval 1
