--- a/tmux.conf
+++ b/tmux.conf
@@ -138,3 +138,11 @@ set-option -g status-justify centre
     bind -t emacs-copy C-WheelDownPane halfpage-down
 ####
 
+# ===== logging =====
+#
+# C-b C-p Start logging.
+bind-key C-p pipe-pane -o '/bin/sh -c "while read -r LINE; do echo \"[\$(date +\"%%Y_%%m%%d_%%H%%M%%S_%%N\")] \${LINE}\" >> \${HOME}/.tmux/log/\$(date +%Y%m%d-%H%M%S)-#S-#I.#P.log; done "' \; display-message "Logging start."
+# C-b C-o Stop logging
+bind-key C-o pipe-pane \; display-message "Logging end."
+# C-b v Open new window. Logging always. (-n is set window name.)
+bind-key v new-window -n 'logging...' \; pipe-pane -o '/bin/sh -c "while read -r LINE; do echo \"[\$(date +\"%%Y_%%m%%d_%%H%%M%%S_%%N\")] \${LINE}\" >> \${HOME}/.tmux/log/\$(date +%Y%m%d-%H%M%S)-#S-#I.#P.log; done "'
