Add shortcut for synchronisation

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
+# synchronization for all panes
+bind e set-window-option synchronize-panes
 # keymapping for resizing pane like vim operation
 bind -r C-h resize-pane -L 5
 bind -r C-j resize-pane -D 5
